# sikw00fcot

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  mkdocs.yml  nfpm.yaml  pyproject.toml  setup.cfg  setup.py  stdeb.cfg
config/: sikw00fcot.config.example  sikw00fcot.service  sikw00fscan.config.example  sikw00fscan.service  sikw00fsentinel.config.example  sikw00fsentinel.service
debian/: sikw00fcot.conf  sikw00fcot.postinst  sikw00fcot.service
docker/: Dockerfile  sikw00fcot-docker-example.conf  start.sh
docs/: changelog.md  configuration.md  index.md  installation.md  usage.md
patches/: apply_fanout.py
scripts/: deploy-nebra.sh  fake_drone.py  loopback-test.sh  postinstall.sh  preremove.sh  radio_suite.sh  track_suite.sh  ws_listen.py  ws_probe.py
sikw00fcot/: __init__.py  classes.py  commands.py  functions.py  runner.py  scan.py  scan_commands.py  sentinel.py  sentinel_commands.py
src/sikw00fcot/: __init__.py  classes.py  commands.py  constants.py  functions.py  runner.py  scan.py  scan_commands.py  sentinel.py  sentinel_commands.py
tests/: test_functions.py
