[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sikw00fcot"
version = "1.0.0"
description = "SiKW00F drone MAVLink telemetry to Cursor-on-Target (CoT) gateway"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Sensors & Signals LLC", email = "gba@snstac.com" }]
dependencies = [
    "pytak[with-crypto] >= 7.0.0",
    "pymavlink >= 2.4.0",
    "pyserial >= 3.4",
    # takproto is required for wss:// (TAK Protocol websocket) delivery — without
    # it pytak sends raw XML to the protobuf endpoint and TAK silently drops it.
    "takproto >= 2.0",
]

[project.scripts]
sikw00fcot = "sikw00fcot.commands:cli"
sikw00fscan = "sikw00fcot.scan_commands:cli"
sikw00fsentinel = "sikw00fcot.sentinel_commands:cli"

[tool.setuptools.packages.find]
include = ["sikw00fcot*"]
