# Setup configuration for SIKW00FCOT: SiKW00F Drone Telemetry to TAK Gateway
#
# Copyright Sensors & Signals LLC https://www.snstac.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[metadata]
name = sikw00fcot
version = file: src/sikw00fcot/VERSION
url = https://github.com/snstac/sikw00fcot
project_urls =
  CI: GitHub Actions = https://github.com/snstac/sikw00fcot/actions
  GitHub: issues = https://github.com/snstac/sikw00fcot/issues
  GitHub: repo = https://github.com/snstac/sikw00fcot
description = Detect & track drones in TAK from their SiK radio telemetry links.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Sensors & Signals LLC
maintainer_email = oss@undef.net
license = Apache 2.0
license_files = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License

  Intended Audience :: Developers

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only

  Development Status :: 4 - Beta

  Operating System :: POSIX
  Operating System :: POSIX :: Linux
keywords =
  Cursor on Target
  Cursor-on-Target
  CoT
  ATAK
  TAK
  WinTAK
  TAK Server
  Drone
  UAS
  UAV
  Counter-UAS
  MAVLink
  SiK
  SiKW00F


[options.entry_points]
console_scripts =
    sikw00fcot = sikw00fcot.commands:cli
    sikw00fscan = sikw00fcot.scan_commands:cli
    sikw00fsentinel = sikw00fcot.sentinel_commands:cli


[options]
packages = sikw00fcot
package_dir =
  sikw00fcot = src/sikw00fcot
python_requires = >=3.9, <4
install_requires =
  pytak[with-crypto] >= 7.0.0
  pymavlink >= 2.4.0
  pyserial >= 3.4


[options.packages.find]
where = src


[options.package_data]
sikw00fcot = VERSION


[options.extras_require]
# wss:// (TAK Protocol websocket) delivery needs takproto — without it pytak
# sends raw XML to the protobuf endpoint and TAK silently drops it.
with_takproto = takproto >= 2.0.0
test =
  pytest-asyncio
  pytest-cov
  pylint
  flake8
  black


[isort]
profile = black


[flake8]
max-line-length = 88
extend-ignore = E203, E704


[pylint]
max-line-length = 88


[pycodestyle]
ignore = E203
max_line_length = 88
